2002-04-29  Anders Carlsson  <andersca@gnu.org>

	* Release 1.116.0

	* configure.in:
	* libgnome/gnome-init.c: (libgnome_post_args_parse):
	Call bindtextdomain_codeset if it's available.
	
2002-04-24  Zbigniew Chyla <cyba@gnome.pl>

	* gnome-data/gnome-2.soundlist.in, gnome-data/gtk-events-2.soundlist.in:
	Removed translations, replaced "description" with "_description".

2002-04-22  Anders Carlsson  <andersca@gnu.org>

	* Release 1.115.0

2002-04-19  Anders Carlsson  <andersca@gnu.org>

	* gnome-data/Makefile.am (soundlist_in_files): Doh, add a
	line separator here.

2002-04-16  Kjartan Maraas  <kmaraas@gnome.org>

	* gnome-data/Makefile.am: Fix intltool support.
	* gnome-data/.cvsignore: Ignore the generated files.
	
2002-04-11  Mark McLoughlin  <mark@skynet.ie>

	* libgnome/gnome-exec.c: (safe_read): impl to handle EINTR
	and EAGAIN.
	(gnome_execute_async_with_env_fds): use it.

2002-04-11  jacob berkman  <jacob@ximian.com>

	* libgnome/gnome-url.c (gnome_url_show): pass G_SPAWN_SEARCH_PATH
	to g_spawn_async() to fix previous commit (and clean up a little)

2002-04-09  Anders Carlsson  <andersca@gnu.org>

	* libgnome/gnome-url.c (gnome_url_show): Don't use a shell,
	just launch the url handler directly. Fixes #73781.
	
	* help-converters/man/Makefile.am:
	* help-converters/man/gnome-man2html.c: (main):
	Use g_snprintf instead of snprintf which apparently needs
	-ldb to work on OSF/1 4.0 (#78166, Gareth Pearce).
	
2002-04-09  Anders Carlsson  <andersca@gnu.org>

	* message-of-doom:
	* Makefile.am:
	Remove message-of-doom file, I think we're stable enough now.
	
	* configure.in:
	* libgnome/Makefile.am:
	Add proper libtool versioning.

	* libgnome/test-libgnome.c:
	Remove this program.

2002-04-08  Anders Carlsson  <andersca@gnu.org>

	* gnome-data/Makefile.am: Add intltool support for our .soundlist
	files. Fixes #76753.

	* libgnome/gnome-score.c: Add patch from Andrey Panov that makes
	the score files use real names instead of login names. (#75197).
