@@ -1,3 +1,11 @@
+2002-05-03  Mikael Hallendal  <micke@codefactory.se>
+
+	* libgnome/gnome-help.c
+	- Fixes #79870
+	(gnome_help_display_with_doc_id): 
+	- always send the full uri to the help browsers. 
+	(gnome_help_display_desktop): same.
+
 2002-04-29  Anders Carlsson  <andersca@gnu.org>
 
 	* Release 1.116.0
